added Upload Embeddings service to API
